Update font paths and images; section backgrounds and font loading now reflect new assets/fonts/ structure

--- a/combined.html
+++ b/combined.html
@@ -598,15 +598,15 @@
   <style>
     @font-face {
       font-family: 'Desire';
-      src: url('assets/Desire.otf') format('opentype');
+      src: url('assets/fonts/Desire.otf') format('opentype');
       font-weight: normal;
       font-style: normal;
     }
     @font-face {
       font-family: 'SuperBridageCond';
-      src: url('assets/superbrigadecond.ttf') format('truetype'),
-           url('assets/superbrigadecond.ttf') format('woff'),
-           url('assets/superbrigadecond.ttf') format('woff2');
+      src: url('assets/fonts/superbrigadecond.ttf') format('truetype'),
+           url('assets/fonts/superbrigadecond.ttf') format('woff'),
+           url('assets/fonts/superbrigadecond.ttf') format('woff2');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
@@ -614,28 +614,28 @@
     /* --- Overlay Font Faces --- */
     @font-face {
       font-family: 'SuperBrigadeCond';
-      src: url('assets/superbrigadecond.ttf') format('truetype');
+      src: url('assets/fonts/superbrigadecond.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
     }
     @font-face {
       font-family: 'Desire';
-      src: url('assets/Desire.otf') format('opentype');
+      src: url('assets/fonts/Desire.otf') format('opentype');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
     }
     @font-face {
       font-family: 'Imbue';
-      src: url('assets/imbue.ttf') format('truetype');
+      src: url('assets/fonts/Imbue.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
     }
     @font-face {
       font-family: 'Koulen';
-      src: url('assets/Koulen.ttf') format('truetype');
+      src: url('assets/fonts/Koulen.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
       font-display: swap;
@@ -1110,7 +1110,7 @@ a, a:hover, a:active, a:focus {
   </section>
 
   <section id="movies" style="position:relative;">
-    <img src="assets/images/love-2.jpg" alt="" class="full-width-img">
+    <img src="assets/images/love-1.jpg" alt="" class="full-width-img">
     <div class="section-overlay feature-overlay">
       <div class="feature-overlay-content">
         <div class="feature-title">love.1</div>
@@ -1122,7 +1122,7 @@ a, a:hover, a:active, a:focus {
 
   <section id="about" style="position:relative;">
     <div class="text" lang="en" style="position:relative;">
-      <img src="assets/images/com.jpg" alt="" class="full-width-img">
+      <img src="assets/images/community.jpg" alt="" class="full-width-img">
       <div class="section-overlay community-overlay">
         <div class="community-top">
           <div class="community-title">#COMMUNITYFILM</div>
