--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@ a, a:hover, a:active, a:focus {
       <div class="section-overlay community-overlay">
         <div class="community-top">
           <div class="community-title">#COMMUNITYFILM</div>
-          <div class="community-subtitle">A COMMUNALLY-DIRECTED FILM</div>
+          <div class="community-subtitle">REAL-TIME, COMMUNALLY-DIRECTED</div>
         </div>
         <div class="community-square"></div>
         <div class="community-bottom">
