WIP: local changes to 404.html and index.html before rebase

--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
   <title>404 | Not Found</title>
   <style>
     body {
-      background: #EFF0EC;
-      color: #222222;
+      background: #ffffff;
+      color: #000000;
       font-family: 'NeueHaasGrotesk', sans-serif, Helvetica;
       margin: 0;
       padding: 0;
