--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,7 @@
         padding-bottom: 7vw;
         padding-left: 7vw;
         padding-right: 7vw;
+        margin-top: 18vw !important; /* Added for better mobile spacing */
       }
       .community-overlay .community-title {
         font-size: 2.5rem !important;
