feat: add light/dark mode favicons using media queries

--- a/index.html
+++ b/index.html
@@ -27,20 +27,26 @@
 
     <link rel="canonical" href="https://proof-of-concept.ca/">
 
-        <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
-
+        <!-- Favicon for light/dark mode -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/light/favicon-16x16.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/dark/favicon-16x16.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/light/favicon-32x32.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/x-icon" href="/assets/favicons/light/favicon.ico" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/x-icon" href="/assets/favicons/dark/favicon.ico" media="(prefers-color-scheme: dark)">
     <!-- Android -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicons/android-chrome-512x512.png">
-
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/light/android-chrome-192x192.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicons/dark/android-chrome-192x192.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicons/light/android-chrome-512x512.png" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicons/dark/android-chrome-512x512.png" media="(prefers-color-scheme: dark)">
     <!-- Apple -->
-    <link rel="apple-touch-icon" href="/assets/favicons/apple-touch-icon.png">
-
+    <link rel="apple-touch-icon" href="/assets/favicons/light/apple-touch-icon.png" media="(prefers-color-scheme: light)">
+    <link rel="apple-touch-icon" href="/assets/favicons/dark/apple-touch-icon.png" media="(prefers-color-scheme: dark)">
     <!-- Site Manifest -->
-    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="manifest" href="/assets/favicons/light/site.webmanifest" media="(prefers-color-scheme: light)">
+    <link rel="manifest" href="/assets/favicons/dark/site.webmanifest" media="(prefers-color-scheme: dark)">
+    <!-- Fallback favicon (optional) -->
+    <link rel="icon" href="/assets/favicons/favicon-32x32.png">
 
     <link rel="preload" href="assets/superbrigadecond.ttf" as="font" type="font/woff2" crossorigin>
   
