--- a/404.html
+++ b/404.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>404 | Not Found</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/light/favicon-32x32.png" media="(prefers-color-scheme: light)">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/dark/favicon-32x32.png" media="(prefers-color-scheme: dark)">
+  <link rel="icon" type="image/x-icon" href="/assets/favicons/light/favicon.ico" media="(prefers-color-scheme: light)">
+  <link rel="icon" type="image/x-icon" href="/assets/favicons/dark/favicon.ico" media="(prefers-color-scheme: dark)">
+  <!-- Fallback favicon (optional) -->
+  <link rel="icon" href="/assets/favicons/favicon-32x32.png">
   <style>
     body {
       background: #ffffff;
