--- a/communityfilm.html
+++ b/communityfilm.html
@@ -209,7 +209,8 @@
     .get-involved {
       position: absolute;
       top: 5.5vw;
-      right: 10vw;
+      left: calc(8vw + 46vw + 3vw);
+      right: auto;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -315,11 +316,11 @@
       background: #111;
       color: #fff;
       font-family: 'NeueHaasGrotesk', Helvetica, Arial, sans-serif;
-      font-size: 1.2vw;
+      font-size: 0.95vw;
       font-weight: 800;
       border: none;
       border-radius: 0.5vw;
-      padding: 0.5vw 1.5vw;
+      padding: 0.3vw 1vw;
       margin-top: 1vw;
       box-shadow: 0 2px 10px rgba(0,0,0,0.09);
       transition: background 0.2s, color 0.2s, box-shadow 0.2s;
