--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     <!-- Fallback favicon (optional) -->
     <link rel="icon" href="/assets/favicons/favicon-32x32.png">
 
+    <!-- Font Awesome CDN for better icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="preload" href="assets/superbrigadecond.ttf" as="font" type="font/woff2" crossorigin>
   
   <style>
@@ -997,8 +1000,13 @@
       font-weight: 500;
       font-size: 0.95vw;
     }
-    .info-icon:hover svg {
-      stroke: #666;
+    .info-icon i {
+      font-size: 1.5vw;
+      color: #000;
+      transition: color 0.2s;
+    }
+    .info-icon:hover i {
+      color: #666;
     }
     @media (max-width: 900px) {
       .info-content {
@@ -1154,7 +1162,7 @@ a, a:hover, a:active, a:focus {
       <div class="hero-title">THE LOVERS</div>
       <div class="hero-subtitle">A FILM EXPERIENCE</div>
       <div class="hero-coming-soon">COMING SOON</div>
-      <a class="hero-link" href="#">GET INVOLVED</a>
+      <a class="hero-link" href="lovers.html">GET INVOLVED</a>
     </div>
   </section>
 
@@ -1164,7 +1172,7 @@ a, a:hover, a:active, a:focus {
       <div class="feature-overlay-content">
         <div class="feature-title">love.1</div>
         <div class="feature-subtitle">a visual poem</div>
-        <a class="feature-link" href="#">watch now</a>
+        <a class="feature-link" href="love1.html">watch now</a>
       </div>
     </div>
   </section>
@@ -1179,7 +1187,7 @@ a, a:hover, a:active, a:focus {
         </div>
         <div class="community-square"></div>
         <div class="community-bottom">
-          <a class="community-link" href="#">SUBMIT NOW</a>
+          <a class="community-link" href="community.html">SUBMIT NOW</a>
           <div class="community-credit">(free cinematography credit)</div>
         </div>
       </div>
@@ -1210,16 +1218,16 @@ a, a:hover, a:active, a:focus {
         <div class="info-email">contact@proof-of-concept.ca</div>
         <div class="info-icons">
           <a href="mailto:contact@proof-of-concept.ca" class="info-icon" title="Email" aria-label="Email">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><polyline points="22,6 12,13 2,6"/></svg>
+            <i class="fa-solid fa-envelope"></i>
           </a>
           <a href="https://instagram.com/proof__concept" class="info-icon" title="Instagram" aria-label="Instagram" target="_blank">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.5" y2="6.5"/></svg>
+            <i class="fa-brands fa-instagram"></i>
           </a>
           <a href="https://x.com/proof__concept" class="info-icon" title="X (Twitter)" aria-label="X (Twitter)" target="_blank">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4l16 16M20 4L4 20"/></svg>
+            <i class="fa-brands fa-x-twitter"></i>
           </a>
           <a href="https://github.com/PROOFOFCONCEPT-Productions" class="info-icon" title="GitHub" aria-label="GitHub" target="_blank">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.58 2 12.26c0 4.48 2.87 8.28 6.84 9.63.5.09.68-.22.68-.48 0-.24-.01-.87-.01-1.7-2.78.62-3.37-1.36-3.37-1.36-.45-1.18-1.1-1.5-1.1-1.5-.9-.63.07-.62.07-.62 1 .07 1.53 1.05 1.53 1.05.89 1.56 2.34 1.11 2.91.85.09-.66.35-1.11.63-1.37-2.22-.26-4.56-1.14-4.56-5.07 0-1.12.39-2.03 1.03-2.75-.1-.26-.45-1.3.1-2.7 0 0 .84-.28 2.75 1.05A9.38 9.38 0 0 1 12 6.84c.85.004 1.71.12 2.51.35 1.91-1.33 2.75-1.05 2.75-1.05.55 1.4.2 2.44.1 2.7.64.72 1.03 1.63 1.03 2.75 0 3.94-2.34 4.81-4.57 5.07.36.32.68.94.68 1.9 0 1.37-.01 2.47-.01 2.81 0 .27.18.58.69.48A10.01 10.01 0 0 0 22 12.26C22 6.58 17.52 2 12 2z"/></svg>
+            <i class="fa-brands fa-github"></i>
           </a>
         </div>
       </div>
