--- a/love1.html
+++ b/love1.html
@@ -250,8 +250,20 @@
     @media (max-width: 900px) {
       .main-header-title { font-size: 1.5rem; }
       .love1-section { padding-top: 2.7rem; padding-bottom: 1.5rem; }
-      .stills-row { height: 32vw; min-height: 110px; max-height: 160px; margin-top: 4vw; margin-bottom: 4vw; padding-left: 2vw; }
-      .still-card { width: 32vw; min-width: 110px; max-width: 160px; border-radius: 2vw; }
+      .stills-row {
+        height: 50vw;
+        min-height: 120px;
+        max-height: 50vw;
+        padding-left: 2vw;
+      }
+      .still-card {
+        width: 60vw;
+        min-width: 120px;
+        max-width: 320px;
+        height: 80%;
+        border-radius: 2vw;
+        margin-top: -6vw;
+      }
       .love1-content { flex-direction: column; gap: 2vw; padding: 0 2vw; }
       .love1-left, .love1-right { min-width: 0; width: 100%; margin-top: 0; }
       .love1-title { font-size: 2rem; }
@@ -260,14 +272,119 @@
       .love1-desc { font-size: 1.2rem; max-width: 100%; }
     }
     @media (max-width: 600px) {
-      .main-header-title { font-size: 1.1rem; }
-      .love1-section { padding-top: 1.5rem; padding-bottom: 1rem; }
-      .stills-row { height: 36vw; min-height: 60px; max-height: 80px; margin-top: 7vw; margin-bottom: 7vw; padding-left: 0.5vw; }
-      .still-card { width: 40vw; min-width: 60px; max-width: 80px; border-radius: 3vw; }
-      .love1-title { font-size: 1.1rem; }
-      .love1-subtitle { font-size: 0.7rem; }
-      .love1-btn { font-size: 0.7rem; padding: 0.4rem 1rem; }
-      .love1-desc { font-size: 0.7rem; }
+      .main-header-title { font-size: 2.2rem; letter-spacing: 0.08em; }
+      .love1-section {
+        padding-top: 2.5rem;
+        padding-bottom: 2rem;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .stills-row {
+        margin-top: 2.5rem;
+        height: 65vw;
+        min-height: 180px;
+        max-height: 70vw;
+        padding-left: 0;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0;
+      }
+      .still-card {
+        width: 90vw;
+        min-width: 120px;
+        max-width: 98vw;
+        height: 60vw;
+        min-height: 120px;
+        max-height: 65vw;
+        border-radius: 5vw;
+        margin-top: -18vw;
+        box-shadow: 0 8px 32px rgba(0,0,0,0.13);
+        border: 2.5px solid #fff;
+      }
+      .still-card:first-child {
+        margin-top: 0;
+      }
+      .love1-content {
+        flex-direction: column;
+        gap: 4vw;
+        padding: 0 4vw;
+        width: 100vw;
+        max-width: 100vw;
+        margin-top: 7vw;
+        align-items: center;
+      }
+      .love1-left, .love1-right {
+        min-width: 0;
+        width: 100%;
+        margin-top: 0;
+        align-items: center;
+        text-align: center;
+      }
+      .love1-title {
+        font-size: 2.5rem;
+        font-weight: 900;
+        margin-bottom: 1.2rem;
+        line-height: 1.1;
+      }
+      .love1-subtitle {
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 2rem;
+        line-height: 1.2;
+      }
+      .love1-btn {
+        font-size: 1.3rem;
+        padding: 1rem 2.2rem;
+        margin-bottom: 1rem;
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 1.2rem;
+      }
+      .love1-desc {
+        font-size: 1.3rem;
+        max-width: 100%;
+        text-align: center;
+        margin-bottom: 0.5rem;
+        line-height: 1.4;
+      }
+      .back-btn {
+        font-size: 1.2rem;
+        padding: 1rem 2.2rem;
+        margin: 3rem auto 0 auto;
+        width: fit-content;
+        min-width: 120px;
+        max-width: 80vw;
+        display: block;
+        border-radius: 2rem !important;
+        text-align: center;
+        text-transform: uppercase;
+      }
+      .info-section {
+        min-height: 40vh;
+        height: auto;
+        padding: 0 0 4vw 0;
+      }
+      .info-content {
+        flex-direction: column;
+        gap: 4vw;
+        align-items: stretch;
+        padding: 8vw 0 4vw 0;
+      }
+      .info-header {
+        font-size: 2rem;
+        margin-bottom: 2vw;
+      }
+      .info-paragraph, .info-email, .info-icon {
+        font-size: 1.2rem;
+      }
+      .info-icon svg {
+        width: 36px;
+        height: 36px;
+      }
     }
     .back-btn {
       display: block;
