--- a/community.html
+++ b/community.html
@@ -544,7 +544,7 @@
       <div class="love1-left">
         <div class="love1-title">#COMMUNITYFILM</div>
         <div class="love1-subtitle">real-time, democratically directed</div>
-        <a class="love1-btn" href="" target="_blank" rel="noopener">coming soon</a>
+        <a class="love1-btn" href="https://forms.gle/fAeMVm7oPnnouDh46" target="_blank" rel="noopener">submit footage</a>
       </div>
       <div class="love1-right">
         <div class="love1-desc">a real-time, community-driven film experience built for social-media with custom editing software.</div>
