Implement clean URLs: remove .html extensions and add .htaccess for URL rewriting

--- a/love1.html
+++ b/love1.html
@@ -550,7 +550,7 @@
         <div class="love1-desc">a visual-poem on the themes of love, created as an instagram reel to showcase the ability for artistic merit in any medium.</div>
       </div>
     </div>
-    <a href="index.html" class="back-btn" aria-label="Back to home">Back</a>
+    <a href="/" class="back-btn" aria-label="Back to home">Back</a>
   </main>
   <script>
     // Custom cursor
