--- a/lovers.html
+++ b/lovers.html
@@ -550,7 +550,7 @@
         <div class="love1-desc">the story of two people, who may or may not be in a relationship, and the events that occur around them.</div>
       </div>
     </div>
-    <a href="index.html" class="back-btn" aria-label="Back to home">Back</a>
+    <a href="/" class="back-btn" aria-label="Back to home">Back</a>
   </main>
   <script>
     // Custom cursor
