--- a/community.html
+++ b/community.html
@@ -550,7 +550,7 @@
         <div class="love1-desc">a real-time, community-driven film experience built for social-media with custom editing software.</div>
       </div>
     </div>
-    <a href="index.html" class="back-btn" aria-label="Back to home">Back</a>
+    <a href="/" class="back-btn" aria-label="Back to home">Back</a>
   </main>
   <script>
     // Custom cursor
