--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,7 @@ a, a:hover, a:active, a:focus {
         </div>
         <div class="community-square"></div>
         <div class="community-bottom">
-          <a class="community-link" href="community.html">SUBMIT FOOTAGE</a>
+          <a class="community-link" href="community">SUBMIT FOOTAGE</a>
           <div class="community-credit">(FREE CINEMATOGRAPHY CREDIT)</div>
         </div>
       </div>
@@ -1269,7 +1269,7 @@ a, a:hover, a:active, a:focus {
       <div class="feature-overlay-content">
         <div class="feature-title">love.1</div>
         <div class="feature-subtitle">a visual poem</div>
-        <a class="feature-link" href="love1.html">watch now</a>
+        <a class="feature-link" href="love1">watch now</a>
       </div>
     </div>
   </section>
@@ -1283,7 +1283,7 @@ a, a:hover, a:active, a:focus {
         <div class="hero-title">THE LOVERS</div>
         <div class="hero-subtitle">A FILM EXPERIENCE</div>
         <div class="hero-coming-soon">COMING SOON</div>
-        <a class="hero-link" href="lovers.html">GET INVOLVED</a>
+        <a class="hero-link" href="lovers">GET INVOLVED</a>
       </div>
     </div>
   </section>
