--- a/lovers.html
+++ b/lovers.html
@@ -272,7 +272,7 @@
       .love1-desc { font-size: 1.2rem; max-width: 100%; }
     }
     @media (max-width: 600px) {
-      .main-header-title { font-size: 2.2rem; letter-spacing: 0.08em; }
+      .main-header-title { font-size: 1.5rem; }
       .love1-section {
         padding-top: 2.5rem;
         padding-bottom: 2rem;
